# inflation_pre_and_post_fed

./: .pre-commit-config.yaml  LICENSE.md  README.md  inflation_study.ipynb  pyproject.toml
data_as_csv/: inflation.csv
data_as_xlsx/: inflation.xlsx
