[tool.poetry]
name = "inflation_study"
version = "0.1.0"
description = ""
authors = ["Leonard Janke <leonard.janke@proton.me>"]
package-mode = false

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "8.3.0"
notebook = "7.1.0"
jupyterlab =  "4.1.8"
sqlalchemy = "2.0.30"
numpy = "1.26.4"
pandas = "2.2.2"
scipy = "1.13.0"
seaborn = "0.13.2"
nbconvert = "7.16.3"
nltk = "3.8.1"
scikit-learn = "1.4.2"
statsmodels = "0.14.2"
xlrd = "2.0.1"
openpyxl = "3.1.2"
pingouin = "0.5.4"
scikit-posthocs = "0.9.0"
rpy2 = "3.5.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
